src/objects/testObj2__c.object
<CustomObject>
    <fields>
        <fullName>Index_Test__c</fullName>
        <externalId>true</externalId>
        <label>Index_Test</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPicklist__c</fullName>
        <label>TestPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>app</fullName>
                    <isActive>false</isActive>
                    <label>app</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testobject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Testobject</label>
        <referenceTo>Testobject__c</referenceTo>
        <relationshipLabel>testObj2</relationshipLabel>
        <relationshipName>testObj2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>checkbox_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>read_only__c</fullName>
        <label>read only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visible__c</fullName>
        <label>visible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>testObj2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>testObj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>testObj2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>test_if_vr</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( TestPicklist__c , &apos;yes&apos;) ,true , false)</errorConditionFormula>
        <errorDisplayField>TestPicklist__c</errorDisplayField>
        <errorMessage>this test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>test_vr</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( TestPicklist__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>picklist value is blank</errorMessage>
    </validationRules>
</CustomObject>